// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialog [common] example testing should match snapshot(s) for 1.small 1`] = `
<Overlay
  className="lucid-Dialog"
  isModal={true}
  isShown={false}
  onBackgroundClick={[Function]}
  onEscape={[Function]}
>
  <div
    className="lucid-Dialog-window lucid-Dialog-window-is-small"
  >
    <header
      className="lucid-Dialog-header"
    >
      Header
    </header>
    <section
      className="lucid-Dialog-body"
    >
      <div>
        For better UX, we recommend NOT handling onEscape and onBackgroundClick when isModal is true. The term "modal" implies that the user needs to interact with one of the buttons in the footer to exit the dialog.
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <Dialog.Footer>
        <Button
          hasOnlyIcon={false}
          isActive={false}
          isDisabled={false}
          kind="invisible"
          onClick={[Function]}
          style={
            Object {
              "marginRight": "9px",
            }
          }
          type="button"
        >
          Cancel
        </Button>
        <Button
          hasOnlyIcon={false}
          isActive={false}
          isDisabled={false}
          kind="primary"
          onClick={[Function]}
          type="button"
        >
          Save
        </Button>
      </Dialog.Footer>
    </section>
    <footer
      className="lucid-Dialog-footer"
    >
      <Button
        hasOnlyIcon={false}
        isActive={false}
        isDisabled={false}
        kind="invisible"
        onClick={[Function]}
        style={
          Object {
            "marginRight": "9px",
          }
        }
        type="button"
      >
        Cancel
      </Button>
      <Button
        hasOnlyIcon={false}
        isActive={false}
        isDisabled={false}
        kind="primary"
        onClick={[Function]}
        type="button"
      >
        Save
      </Button>
    </footer>
  </div>
</Overlay>
`;

exports[`Dialog [common] example testing should match snapshot(s) for 2.medium 1`] = `
<Overlay
  className="lucid-Dialog"
  isModal={true}
  isShown={false}
  onBackgroundClick={[Function]}
  onEscape={[Function]}
>
  <div
    className="lucid-Dialog-window lucid-Dialog-window-is-medium"
  >
    <header
      className="lucid-Dialog-header"
    >
      Header
    </header>
    <section
      className="lucid-Dialog-body"
    >
      <div>
        For better UX, we recommend NOT handling onEscape and onBackgroundClick when isModal is true. The term "modal" implies that the user needs to interact with one of the buttons in the footer to exit the dialog.
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <Dialog.Footer>
        <Button
          hasOnlyIcon={false}
          isActive={false}
          isDisabled={false}
          kind="invisible"
          onClick={[Function]}
          style={
            Object {
              "marginRight": "9px",
            }
          }
          type="button"
        >
          Cancel
        </Button>
        <Button
          hasOnlyIcon={false}
          isActive={false}
          isDisabled={false}
          kind="primary"
          onClick={[Function]}
          type="button"
        >
          Save
        </Button>
      </Dialog.Footer>
    </section>
    <footer
      className="lucid-Dialog-footer"
    >
      <Button
        hasOnlyIcon={false}
        isActive={false}
        isDisabled={false}
        kind="invisible"
        onClick={[Function]}
        style={
          Object {
            "marginRight": "9px",
          }
        }
        type="button"
      >
        Cancel
      </Button>
      <Button
        hasOnlyIcon={false}
        isActive={false}
        isDisabled={false}
        kind="primary"
        onClick={[Function]}
        type="button"
      >
        Save
      </Button>
    </footer>
  </div>
</Overlay>
`;

exports[`Dialog [common] example testing should match snapshot(s) for 3.large-with-rich-header 1`] = `
<Overlay
  className="lucid-Dialog"
  isModal={true}
  isShown={false}
  onBackgroundClick={[Function]}
  onEscape={[Function]}
>
  <div
    className="lucid-Dialog-window lucid-Dialog-window-is-large"
  >
    <header
      className="lucid-Dialog-header"
    >
      <i>
        Rich Header
      </i>
    </header>
    <section
      className="lucid-Dialog-body"
    >
      <Dialog.Header>
        <i>
          Rich Header
        </i>
      </Dialog.Header>
      <div>
        For better UX, we recommend NOT handling onEscape and onBackgroundClick when isModal is true. The term "modal" implies that the user needs to interact with one of the buttons in the footer to exit the dialog.
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <div>
        Body
      </div>
      <Dialog.Footer>
        <Button
          hasOnlyIcon={false}
          isActive={false}
          isDisabled={false}
          kind="invisible"
          onClick={[Function]}
          style={
            Object {
              "marginRight": "9px",
            }
          }
          type="button"
        >
          Cancel
        </Button>
        <Button
          hasOnlyIcon={false}
          isActive={false}
          isDisabled={false}
          kind="primary"
          onClick={[Function]}
          type="button"
        >
          Save
        </Button>
      </Dialog.Footer>
    </section>
    <footer
      className="lucid-Dialog-footer"
    >
      <Button
        hasOnlyIcon={false}
        isActive={false}
        isDisabled={false}
        kind="invisible"
        onClick={[Function]}
        style={
          Object {
            "marginRight": "9px",
          }
        }
        type="button"
      >
        Cancel
      </Button>
      <Button
        hasOnlyIcon={false}
        isActive={false}
        isDisabled={false}
        kind="primary"
        onClick={[Function]}
        type="button"
      >
        Save
      </Button>
    </footer>
  </div>
</Overlay>
`;

exports[`Dialog [common] example testing should match snapshot(s) for 4.no-modal 1`] = `
<Overlay
  className="lucid-Dialog"
  isModal={false}
  isShown={false}
  onBackgroundClick={[Function]}
  onEscape={[Function]}
>
  <div
    className="lucid-Dialog-window lucid-Dialog-window-is-small"
  >
    <header
      className="lucid-Dialog-header"
    >
      Header
    </header>
    <section
      className="lucid-Dialog-body"
    >
      In most cases, you'll probably just use an isModal Dialog, but this example shows that the Dialog doesn't have to be a modal. Try pressing "escape" to close this Dialog.
      <Dialog.Footer>
        <Button
          hasOnlyIcon={false}
          isActive={false}
          isDisabled={false}
          kind="invisible"
          onClick={[Function]}
          style={
            Object {
              "marginRight": "9px",
            }
          }
          type="button"
        >
          Cancel
        </Button>
        <Button
          hasOnlyIcon={false}
          isActive={false}
          isDisabled={false}
          kind="primary"
          onClick={[Function]}
          type="button"
        >
          Save
        </Button>
      </Dialog.Footer>
    </section>
    <footer
      className="lucid-Dialog-footer"
    >
      <Button
        hasOnlyIcon={false}
        isActive={false}
        isDisabled={false}
        kind="invisible"
        onClick={[Function]}
        style={
          Object {
            "marginRight": "9px",
          }
        }
        type="button"
      >
        Cancel
      </Button>
      <Button
        hasOnlyIcon={false}
        isActive={false}
        isDisabled={false}
        kind="primary"
        onClick={[Function]}
        type="button"
      >
        Save
      </Button>
    </footer>
  </div>
</Overlay>
`;

exports[`Dialog [common] example testing should match snapshot(s) for 5.no-footer 1`] = `
<Overlay
  className="lucid-Dialog"
  isModal={true}
  isShown={false}
  onBackgroundClick={[Function]}
  onEscape={[Function]}
>
  <div
    className="lucid-Dialog-window lucid-Dialog-window-is-small"
  >
    <header
      className="lucid-Dialog-header"
    >
      Header
    </header>
    <section
      className="lucid-Dialog-body"
    >
      This \`Dialog\` has no footer!
    </section>
  </div>
</Overlay>
`;
